<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_weather"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="233dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#55ffffff"
            android:fontFamily="casual"
            android:onClick="searchCity"
            android:padding="20dp"
            android:shadowColor="@android:color/black"
            android:text="@string/search"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>